--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
     </div>
   </main>
 
-
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer class="footer">
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/hilla10" target="_blank">Haylemichael Negusse</a>.
+    </div>
+  </footer>
 
   <!-- script -->
   <script src="js/script.js"></script>
